tests/baselines/reference/parserComputedPropertyName23.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName23.ts(2,9): error TS1086: An accessor cannot be declared in an ambient context.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName23.ts(2,10): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName23.ts (2 errors) ====
    declare class C {
        get [e](): number 
            ~~~
!!! error TS1086: An accessor cannot be declared in an ambient context.
             ~
!!! error TS2304: Cannot find name 'e'.
    }